[gd_scene load_steps=7 format=3 uid="uid://dy4jkt0nchkpu"]

[ext_resource type="Script" uid="uid://cpptbojvluohq" path="res://interface.gd" id="1_a54w3"]
[ext_resource type="Script" uid="uid://dn2uckg56t1qg" path="res://camera_2d.gd" id="2_qgm5b"]
[ext_resource type="PackedScene" uid="uid://drddcrgnlj8w6" path="res://main.tscn" id="2_ulrst"]
[ext_resource type="Script" uid="uid://mxr00gltg6fm" path="res://stop_button.gd" id="4_87n3e"]
[ext_resource type="PackedScene" uid="uid://d3qy4duhgd8qf" path="res://hex_picker.tscn" id="5_7xx0l"]

[sub_resource type="Theme" id="Theme_0vkce"]

[node name="Interface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = SubResource("Theme_0vkce")
script = ExtResource("1_a54w3")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="SubViewportContainer" type="SubViewportContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="PanelContainer/VBoxContainer/SubViewportContainer"]
handle_input_locally = false
physics_object_picking = true
size = Vector2i(1152, 613)
render_target_update_mode = 4

[node name="Grid" parent="PanelContainer/VBoxContainer/SubViewportContainer/SubViewport" instance=ExtResource("2_ulrst")]
z_index = 3

[node name="Camera2D" type="Camera2D" parent="PanelContainer/VBoxContainer/SubViewportContainer/SubViewport"]
script = ExtResource("2_qgm5b")

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="HFlowContainer" type="VFlowContainer" parent="PanelContainer/VBoxContainer/AspectRatioContainer"]
layout_mode = 2

[node name="CheckButton" type="CheckButton" parent="PanelContainer/VBoxContainer/AspectRatioContainer/HFlowContainer"]
layout_mode = 2
button_pressed = true
text = "Backtracking enabled"

[node name="FillGrid" type="Button" parent="PanelContainer/VBoxContainer/AspectRatioContainer/HFlowContainer"]
layout_mode = 2
text = "Fill Grid
"

[node name="ClearGrid" type="Button" parent="PanelContainer/VBoxContainer/AspectRatioContainer/HFlowContainer"]
layout_mode = 2
text = "Clear Grid"

[node name="Control2" type="HBoxContainer" parent="PanelContainer/VBoxContainer/AspectRatioContainer/HFlowContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/AspectRatioContainer/HFlowContainer/Control2"]
layout_mode = 2
text = "Border Edge Type"

[node name="OptionButton" type="OptionButton" parent="PanelContainer/VBoxContainer/AspectRatioContainer/HFlowContainer/Control2"]
layout_mode = 2
selected = 0
item_count = 4
popup/item_0/text = "None"
popup/item_0/id = 0
popup/item_1/text = "Water"
popup/item_1/id = 1
popup/item_2/text = "Grass"
popup/item_2/id = 2
popup/item_3/text = "Forest"
popup/item_3/id = 3

[node name="Control" type="HBoxContainer" parent="PanelContainer/VBoxContainer/AspectRatioContainer/HFlowContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/AspectRatioContainer/HFlowContainer/Control"]
layout_mode = 2
text = "Grid size:"

[node name="OptionButton" type="OptionButton" parent="PanelContainer/VBoxContainer/AspectRatioContainer/HFlowContainer/Control"]
layout_mode = 2
selected = 0
item_count = 5
popup/item_0/text = "5"
popup/item_0/id = 0
popup/item_1/text = "7"
popup/item_1/id = 1
popup/item_2/text = "9"
popup/item_2/id = 2
popup/item_3/text = "11"
popup/item_3/id = 3
popup/item_4/text = "13"
popup/item_4/id = 4

[node name="VSlider" type="VSlider" parent="PanelContainer"]
custom_minimum_size = Vector2(20, 400)
layout_mode = 2
size_flags_vertical = 4
min_value = 0.5
max_value = 4.0
step = 0.1
value = 1.0

[node name="Button" type="Button" parent="PanelContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Stop processing"
script = ExtResource("4_87n3e")

[node name="HexPicker" parent="PanelContainer" instance=ExtResource("5_7xx0l")]
visible = false
layout_mode = 2

[connection signal="resized" from="PanelContainer/VBoxContainer/SubViewportContainer" to="PanelContainer/VBoxContainer/SubViewportContainer/SubViewport/Grid" method="_on_sub_viewport_container_resized"]
[connection signal="hex_clicked" from="PanelContainer/VBoxContainer/SubViewportContainer/SubViewport/Grid" to="." method="_on_hex_clicked"]
[connection signal="processing" from="PanelContainer/VBoxContainer/SubViewportContainer/SubViewport/Grid" to="PanelContainer/Button" method="_on_grid_processing"]
[connection signal="toggled" from="PanelContainer/VBoxContainer/AspectRatioContainer/HFlowContainer/CheckButton" to="PanelContainer/VBoxContainer/SubViewportContainer/SubViewport/Grid" method="_on_check_button_toggled"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/AspectRatioContainer/HFlowContainer/FillGrid" to="PanelContainer/VBoxContainer/SubViewportContainer/SubViewport/Grid" method="_on_interface_generate"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/AspectRatioContainer/HFlowContainer/ClearGrid" to="PanelContainer/VBoxContainer/SubViewportContainer/SubViewport/Grid" method="_on_clear_grid_pressed"]
[connection signal="item_selected" from="PanelContainer/VBoxContainer/AspectRatioContainer/HFlowContainer/Control2/OptionButton" to="PanelContainer/VBoxContainer/SubViewportContainer/SubViewport/Grid" method="_on_border_edge_selected"]
[connection signal="item_selected" from="PanelContainer/VBoxContainer/AspectRatioContainer/HFlowContainer/Control/OptionButton" to="PanelContainer/VBoxContainer/SubViewportContainer/SubViewport/Grid" method="_on_option_button_item_selected"]
[connection signal="value_changed" from="PanelContainer/VSlider" to="PanelContainer/VBoxContainer/SubViewportContainer/SubViewport/Camera2D" method="_on_v_slider_value_changed"]
[connection signal="pressed" from="PanelContainer/Button" to="PanelContainer/VBoxContainer/SubViewportContainer/SubViewport/Grid" method="_on_button_pressed"]
[connection signal="hex_config_selected" from="PanelContainer/HexPicker" to="." method="_on_hex_picker_hex_config_selected"]
